src/app/assets/_layout.less
@Pad1: 8px;
@Pad2: 16px;
@Pad3: 32px;

@TinyWidth: 600px;
@SmallWidth: 760px;
@MediumWidth: 960px;
@LargerWidth: 1260px;

html, body {
  height: 100%;
}

#app {
  overflow: auto;
}

#top {
  grid-area: header;
}

#table-left {
  grid-area: table-left;
}

#main {
  grid-area: main;
}

#table-main-01 {
  grid-area: tmain01;
}

#table-main-02 {
  grid-area: tmain02;
}

#footer {
  grid-area: footer;
}

.wrapper {
  max-width: @LargerWidth;
  position: relative;
  margin: auto;
}

.reset {
  padding: 0;
  margin: 0;
}

.flex {
  display: flex;

  &.center {
    align-items: center;
  }

  > .auto {
    flex: 1 1 auto;
  }
}

.pad {
  padding: @Pad1;
}

.fit {
  max-width: 100%;
  height: auto;
}

.sp {
  + .sp {
    border-left: 1px solid @DarkText;
  }
}

.sm-show,
.md-show,
.lg-show {
  display: none;
}

@media screen and (max-width: ((@LargerWidth + (@Pad3 * 2)) - 1px)) {
  .sidebar {
    + .wrapper {
      > * {
        margin-right: @Pad3;
      }
    }
  }
}

@media screen and (max-width: (@TinyWidth - 1px)) {
  .sm-auto {
    flex: 1 1 auto;
  }
}

@media screen and (min-width: @TinyWidth) {
  .sm-flex {
    .flex;
  }

  .sm-show {
    display: inline-block;
  }
}

@media screen and (min-width: @SmallWidth) {
  #app {
    display: grid;
    grid-template-columns: 1.9fr 3.1fr;
    grid-template-rows: ~"calc(40vh - 123px)" 30vh 30vh;
    grid-template-areas:
      'table-left main'
      'table-left tmain01'
      'table-left tmain02';

    > * {
      overflow: hidden;
      position: relative;
    }
  }

  #main {
    .md-push {
      margin-left: 0;
    }

    ~ #table-main-01,
    ~ #table-main-02 {
      .md-push {
        margin-left: 0;
      }
    }
  }

  .stats {
    caption,
    table,
    tbody,
    thead {
      display: block;
    }

    table {
      position: absolute;
      bottom: 0;
      top: 0;
    }

    tbody {
      width: 100%;
      position: absolute;
      overflow: auto;
      bottom: @Pad1;
      top: (@Pad1 * 3) + @Pad3;
    }

    tr {
      display: flex;
    }

    th, td {
      flex: 1 1 auto;
      overflow: hidden;
    }
  }

  .md-flex {
    .flex;
  }

  .md-push {
    height: 100%;
    margin: @Pad1;
    position: relative;
  }

  .auto {
    margin-left: 0;
    margin-bottom: 0;
  }

  .md-show {
    display: inline-block;
  }

  .md-hide {
    display: none;
  }
}

@media screen and (min-width: @MediumWidth) {
  #app {
    display: grid;
    grid-template-columns: 2fr 3fr 3fr;
    grid-template-rows: ~"calc(60vh - 123px)" 40vh;
    grid-template-areas:
      'table-left main main'
      'table-left tmain01 tmain02';
  }

  .lg-flex {
    .flex;
  }

  .lg-show {
    display: inline-block;
  }
}

